--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
 <body>
     <header>
         <!-- ------nav----------- -->
-         <nav>
-            
-         </nav>
+         <div class="navigation">
+          <nav class="nav-bar">
+              <h1 class="logo">LOGO</h1>
+              <a href=""><button class="singup-btn">Sing Up
+              </button>
+              </a>
+           </nav>
+        </div>
+        <!-- ------------banner------------ -->
+        <div class="banner">
+            <h1>Cool Dark UI Template for<br> Webflow Agencies!
+            </h1>
+            <a href=""><button class="banner-btn">Stay Focused</button></a>
+        </div>
     </header>
 </body>
 </html>
