--- a/index.html
+++ b/index.html
@@ -24,5 +24,24 @@
             <a href=""><button class="banner-btn">Stay Focused</button></a>
         </div>
     </header>
+    <main>
+        <section>
+            <!-- action---------------------- -->
+             <div class="action">
+                <div class="action-contant">
+                    <h1>
+                        See It in Action
+                    </h1>
+                    <p>Explore the live preview and imagine your   <br> brand in this bold new look</p>
+                    <a href=""><button class="action-btn">
+                        Launch Live Preview
+                    </button></a>
+                </div>
+                <div class="action-img">
+                    <img src="./image/wc-mini.png" alt="">
+                </div>
+             </div>
+        </section>
+    </main>
 </body>
 </html>
