--- a/index.html
+++ b/index.html
@@ -42,6 +42,40 @@
                 </div>
              </div>
         </section>
+        <section>
+            <!-- ----------------user-------- -->
+             <div class="user">
+                <h1 class="user-heading">
+                    Joined Thousands of Productive Users
+                </h1>
+                <div class="user-count">
+                    <div>
+                        <h1>
+                            50K
+                        </h1>
+                        <p>
+                            Active Users
+                        </p>
+                    </div>
+                    <div>
+                        <h1>
+                            2M+
+                        </h1>
+                        <p>
+                            Focus Sessions
+                        </p>
+                    </div>
+                    <div>
+                        <h1>
+                            95%
+                        </h1>
+                        <p>
+                            Satisfaction Rate
+                        </p>
+                    </div>
+                </div>
+             </div>
+        </section>
     </main>
 </body>
 </html>
