--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          <div class="navigation">
           <nav class="nav-bar">
               <h1 class="logo">LOGO</h1>
-              <a href=""><button class="singup-btn">Sing Up
+              <a href=""><button class="signup-btn">Sign Up
               </button>
               </a>
            </nav>
@@ -28,7 +28,7 @@
         <section>
             <!-- action---------------------- -->
              <div class="action">
-                <div class="action-contant">
+                <div class="action-content">
                     <h1>
                         See It in Action
                     </h1>
@@ -155,6 +155,17 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section>
+            <!-- ---------additional------focus-better----- -->
+
+            <div class="additional">
+                <h1>Ready to focus better</h1>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                <a href=""><button class="add-btn">Ger Started Free</button></a>
+                <div>
+                <img src="./image/wc-big.png" alt=""></div>
             </div>
         </section>
     </main>
