--- a/index.html
+++ b/index.html
@@ -168,6 +168,29 @@
                 <img src="./image/wc-big.png" alt=""></div>
             </div>
         </section>
+        <section>
+            <!-- -----------information----------- -->
+
+            <div class="information">
+                <div class="info-tittle">
+                    <h1>Let’s Get in <br> Touch</h1>
+                </div>
+                <div class="info-box">
+                    
+                        <label for="email">Email</label> <br><br>
+                            <input class="email" type="email" placeholder="Example@email.com">
+
+                        <br><br><label for="name">Name</label>
+                        <br><br>
+                            <input class="email" type="text" placeholder="Your Full Name">
+                        <br><br><label for="Message">Message</label> <br><br>
+                            <textarea class="text-box" name="" id="" rows="5" cols="42" placeholder="Write Your Message"></textarea><br><br>
+                            <div class="btn-info"><a href="">
+                            <button class="info-btn">Get in Touch</button>
+                            </a></div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
