--- a/index.html
+++ b/index.html
@@ -192,5 +192,15 @@
             </div>
         </section>
     </main>
+    <footer>
+        <h1 class="footer-heading">LOGO</h1>
+        <p class="footer-description">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+        <div class="footer-link">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">How It Work</a>
+            <a href="">Services</a>
+        </div>
+    </footer>
 </body>
 </html>
